Fix: Digital Orders Spacing Bug

--- a/src/views/OrderPage/OrderPage.scss
+++ b/src/views/OrderPage/OrderPage.scss
@@ -146,6 +146,7 @@
   .past-orders {
     display: flex;
     justify-content: center;
+    align-items: center;
     flex-direction: column;
     margin: 24px 0 32px 0;
     font-size: $font-size-14px;
